--- a/pom.xml
+++ b/pom.xml
@@ -93,13 +93,13 @@
 
 	<distributionManagement>
 	    <repository>
-	      <id>nexus</id>
+	      <id>nexus-release</id>
 	      <name>TechLink Academy Releases Nexus Repository</name>
 	      <url>http://localhost:8003/repository/castpro-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
-	      <id>nexus</id>
+	      <id>nexus-snapshot</id>
 	      <name>TechLink Academy Snapshot Nexus Repository </name>
 	      <url>http://localhost:8003/repository/castpro-snapshot/</url>
 	    </snapshotRepository>
